# Road-Tools

./: .gitignore  FINAL_PUSH_INSTRUCTIONS.md  PUSH_GUIDE.md  README.md  READY_TO_PUSH.md  SPLIT_COMPLETION_REPORT.md  SPLIT_GUIDE.md  SPLIT_STATUS.md
CostEstimateGenerator/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  temp_alt_seek_header.txt  update_cli_qty_path.py  update_pyproject_deps.py
CostEstimateGenerator/.github/workflows/: ci.yml
CostEstimateGenerator/data_sample/: 2300946_project_quantities.xlsx  Estimate_Audit.csv  Estimate_Draft_template.csv  payitems_workbook.json  project_attributes.xlsx
CostEstimateGenerator/data_sample/BidTabsData/: 2022-08-10.xls  2022-09-14.xls  2022-10-13.xls  2022-11-16.xls  2022-12-07.xls  2022-12-14.xls  2022-12-21.xls  2023-01-19.xls  2023-02-10.xls  2023-03-15.xls  2023-04-03.xls  2023-04-05.xls  2023-04-12.xls  2023-04-19.xls  2023-05-10.xls  2023-07-12.xls  2023-08-09.xls  2023-09-13.xls  2023-09-27.xls  2023-10-12.xls  2023-11-01.xls  2023-11-15.xls  2023-12-13.xls  2024-01-18.xls  2024-01-24.xls  2024-02-15.xls  2024-03-13.xls  2024-03-20.xls  2024-03-27.xls  (+19 more)
CostEstimateGenerator/example_outputs/: AI_Analysis_Report.md  AI_Recommendations.md  Estimate_Audit.csv  Estimate_Draft.xlsx  all_comparisons.csv  comparison.csv  summary_metrics.csv
CostEstimateGenerator/references/: region_map.xlsx
CostEstimateGenerator/scripts/: evaluate_past_bids.py  prepare_sample_outputs.py  run_pipeline.py
CostEstimateGenerator/tests/: conftest.py  test_io.py  test_mapping.py  test_stats.py  test_writer.py
(+82 files in other folders)
