[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "costest"
version = "0.1.0"
description = "Cost Estimate Generator"
readme = "README.md"
authors = [{ name = "Road Tools Automation" }]
requires-python = ">=3.9"
dependencies = [
    "numpy==1.26.4",
    "pandas==1.5.3",
    "openpyxl==3.1.2",
]

[tool.setuptools.packages.find]
where = ["src"]
